--- a/project/project-2.html
+++ b/project/project-2.html
@@ -140,18 +140,20 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg-6 col-12 scrolled slide-left" style="cursor:pointer;">
+                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';text-align: left; margin-bottom: 3px;">
+                                <b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. 
+                                jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
                             <h3 class="card-1 pt-2 mb-3 scrolled slide-left">Tampilan Frontend</h3>
                             <div class="swiper swiper1" style="margin-bottom:20px;">
                                 <div class="swiper-wrapper">
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend2.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend3.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend4.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend5.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend6.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-frontend7.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend2.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend2.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend3.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend3.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend4.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend4.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend5.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend5.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend6.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend6.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-frontend7.png" class="swiper-slide"><img src="../project-images2/project2-img-frontend7.png" class="pro img-fluid" alt=""></a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination1"></div>
                                 <div class="swiper-button-prev swiper-button-prev1"></div>
@@ -161,16 +163,16 @@
                             <h3 class="card-1 pt-2 mb-3 scrolled slide-right">Tampilan Backend</h3>
                             <div class="swiper swiper2">
                                 <div class="swiper-wrapper">
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend1.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend2.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend3.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend4.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend5.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend6.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend7.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend8.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend9.png" class="pro img-fluid" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="../project-images2/project2-img-backend10.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend1.png" class="swiper-slide"><img src="../project-images2/project2-img-backend1.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend2.png" class="swiper-slide"><img src="../project-images2/project2-img-backend2.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend3.png" class="swiper-slide"><img src="../project-images2/project2-img-backend3.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend4.png" class="swiper-slide"><img src="../project-images2/project2-img-backend4.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend5.png" class="swiper-slide"><img src="../project-images2/project2-img-backend5.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend6.png" class="swiper-slide"><img src="../project-images2/project2-img-backend6.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend7.png" class="swiper-slide"><img src="../project-images2/project2-img-backend7.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend8.png" class="swiper-slide"><img src="../project-images2/project2-img-backend8.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend9.png" class="swiper-slide"><img src="../project-images2/project2-img-backend9.png" class="pro img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images2/project2-img-backend10.png" class="swiper-slide"><img src="../project-images2/project2-img-backend10.png" class="pro img-fluid" alt=""></a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination2"></div>
                                 <div class="swiper-button-prev swiper-button-prev2"></div>
@@ -277,9 +279,9 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
-                                Design: 
-                                <a rel="sponsored" href="" target="_blank">TemplateMo</a>
+                                <span class="">© 2020 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
+                                Design Edited: 
+                                <a rel="sponsored" href="" target="_blank">By Isul Alifajri</a>
                             </p>
                         </div>
                     </div>
@@ -344,6 +346,7 @@
             });
         </script>
 
-        
+        <!-- fslightbox cdn js link -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
     </body>
 </html>
