--- a/project/project-1.html
+++ b/project/project-1.html
@@ -267,9 +267,9 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
-                                Design: 
-                                <a rel="sponsored" href="" target="_blank">TemplateMo</a>
+                                <span class="">© 2020 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
+                                Design Edited: 
+                                <a rel="sponsored" href="" target="_blank">By Isul Alifajri</a>
                             </p>
                         </div>
                     </div>
