--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="row">
 
                         <div class="col-lg-7 col-12">
-                            <div class="hero-text">
+                            <div class="hero-text" style="top:0px">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
                                     <img src="img/foto.jpeg" class="avatar-image avatar-image-large img-fluid" alt="Isul Alifajri">
 
