--- a/project/project-2.html
+++ b/project/project-2.html
@@ -100,7 +100,7 @@
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0"  style="margin-bottom:20px;">
                             <div class="about-thumb">
 
-                                <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top buble">
+                                <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
                                     <h2 class="text-white me-4 mb-0">Barbershop</h2>
 
                                     <img src="../project-images2/project2-img-frontend.png" class="avatar-image img-fluid" alt="">
@@ -120,7 +120,7 @@
                                     <label><strong>Framework :</strong></label>
                                      <ul>
                                         <li>Laravel v8</li>
-                                        <li>Bootstrap v5 (AdminKit)</li>
+                                        <li>Bootstrap v5 (AdminKit Dashboard)</li>
                                      </ul>
                                     <label><strong>Fitur-Fitur :</strong></label>
                                      <ul>
