--- a/project/project-4.html
+++ b/project/project-4.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>Project Third</title>
+        <title>Project Fourth</title>
 
         <!-- Icon Portofolio -->
         <link href="../img/heningsunyi.jpg" rel="icon">
@@ -97,32 +97,53 @@
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
                                     <h2 class="text-white me-4 mb-0">Dekorasi</h2>
 
-                                    <img src="../project-images3/project-3-img1.png" class="avatar-image img-fluid" alt="">
+                                    <img src="../project-images4/storenits/frontend/frontend-storenits-1.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="card-1 pt-2 mb-3 scrolled slide-right">About Web</h3>
 
                                 <div class="card-2 scrolled fade-in-bottom font">
-                                    <label class="mt-3"><strong>Markup dan Bahasa Pemrograman</strong></label>
+                                    <label class="mt-3"><strong>Bahasa Pemrograman dan Database</strong></label>
                                      <ul>
-                                        <li>HTML</li>
+                                        <li>PHP v8.2.4</li>
                                         <li>Javascript</li>
                                         <li>JQuery</li>
                                         <li>Css</li>
+                                        <li>MySQL</li>
+                                     </ul>
+                                     <label><strong>Framework :</strong></label>
+                                     <ul>
+                                        <li>Laravel v10.33.0</li>
+                                        <li>Bootstrap v5 (Sneat Dashboard)</li>
                                      </ul>
                                     <label><strong>Fitur-Fitur :</strong></label>
                                      <ul>
                                         <li>Responsive Page</li>
                                         <li>Slider Image by Swiper js</li>
-                                        <li>Add To Favorite</li>
-                                        <li>Share Data</li>
-                                        <li>CRUD Favorite To Local Storage</li>
+                                        <li>View All Products</li>
+                                        <li>View Single Products</li>
+                                        <li>Share Products</li>
+                                        <li>View count products</li>
+                                        <li>Log in / Log Out</li>
+                                        <li>CRUD</li>
+                                        <li>Send Email for Password Users</li>
+                                        <li>Implementasi Soft Delets</li>
+                                        <li>Login Terakhir per users</li>
+                                        <li>CkEditor for Descript Products</li>
+                                        <li>Modal Image Single Products by cdn fslightbox</li>
+                                        <li>Statistics Visitors</li>
+                                        <li>Relasi Tabels (Users, Categories, Products)</li>
+                                        <li>Log Activity Log in / Log Out</li>
+                                        <li>Audit Tables</li>
+                                        <li>Modal Detail From Audits</li>
+                                        <li>Generate Report To PDF(DOMPDF)</li>
+                                        <li>Type Data in Database : uuid(primary key), string, json(crud sosmed), int, boolean, datetime(timestamp)</li>
                                      </ul>
                                     <p><strong>Dokumentasi :</strong>
-                                        <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
+                                        <!-- <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
                                             <img src="../icons-programs/youtube.png" class="hover-code" alt="">
-                                        </a>
-                                        <a class="code"  href="https://github.com/isulalifajri/website-dekorasi-pernikahan" target="_blank" id="tooltip1" title="private">
+                                        </a> -->
+                                        <a class="code"  href="https://github.com/isulalifajri/storenits-laravel-10" target="_blank" id="tooltip1" title="private">
                                             <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
                                         </a>
                                     </p>
@@ -132,19 +153,30 @@
 
                         <div class="col-lg-6 col-12 scrolled slide-left" style="cursor:pointer;">
                             <h3 class="card-1 pt-2 mb-3 scrolled slide-left">User Interface</h3>
-                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';"><b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
+                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';text-align: left; margin-bottom: 3px;">
+                                <b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. 
+                                jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
                             <div class="swiper swiper1" style="margin-bottom:20px;">
                                 <div class="swiper-wrapper">
-                                    <a data-fslightbox href="../project-images3/project-3-img1.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img1.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img2.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img2.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img3.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img3.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img4.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img4.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img5.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img5.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img6.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img6.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img7.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img7.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img8.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img8.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img9.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img9.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images3/project-3-img10.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img10.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-1.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-1.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-2.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-2.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-3.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-3.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-4.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-4.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-5.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-5.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-6.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-6.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-7.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-7.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-8.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-8.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-9.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-9.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-10.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-10.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-11.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-11.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-12.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-12.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-13.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-13.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-14.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-14.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-15.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-15.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-16.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-16.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-17.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-17.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-18.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-18.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-19.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-19.png" class="img-fluid" alt=""></a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination1"></div>
                                 <div class="swiper-button-prev swiper-button-prev1"></div>
