--- a/project/project-2.html
+++ b/project/project-2.html
@@ -216,13 +216,13 @@
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                     <ul class="social-icon">
-                                        <li class="social-icon-item"><a href="" class="social-icon-link bi-twitter"></a></li>
+                                        <li class="social-icon-item"><a href="https:://www.facebook.com/izul.alifajri/" class="social-icon-link bi-facebook" target="_blank"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.instagram.com/alifajriizul/" class="social-icon-link bi-instagram" target="_blank"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/isul-alifajri-128b6b245/" class="social-icon-link bi-linkedin" target="_blank"></a></li>
 
-                                        <li class="social-icon-item"><a href="" class="social-icon-link bi-youtube"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.youtube.com/@isulalifajri7425" class="social-icon-link bi-youtube" target="_blank" ></a></li>
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Mulai project</strong>
