--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     <p>Haloo! <b>Saya Isul Alifajri.</b> Lulusan Teknik Informatika di Universitas 17 Agustus 1945 Surabaya. 
                                         Menguasai Microsoft Office Word, Excel, Acces, dan Power Point. 
                                         Bisa Membuat Website Menggunakan Bahasa Pemrograman PHP, CSS, Javascipt, dan Jquery. Beberapa framework yang saya kuasai
-                                        yaitu: Codeigniter 3, Laravel 8 dan Bootstrap 4/5. </p>
+                                        yaitu: Codeigniter 3, Laravel 8/10 dan Bootstrap 4/5. </p>
     
                                     <p>Suka jalan-jalan ke tempat yang sepi tapi tenang, seperti ke daerah bebukitan sambil melihat indahnya pemandangan lembah dan luasnya alam.</p>
                                 </div>
