--- a/project/project-3.html
+++ b/project/project-3.html
@@ -188,7 +188,7 @@
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                     <ul class="social-icon">
-                                        <li class="social-icon-item"><a href="https:://www.facebook.com/izul.alifajri/" class="social-icon-link bi-facebook" target="_blank"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.facebook.com/izul.alifajri/" class="social-icon-link bi-facebook" target="_blank"></a></li>
 
                                         <li class="social-icon-item"><a href="https://www.instagram.com/alifajriizul/" class="social-icon-link bi-instagram" target="_blank"></a></li>
 
