--- a/project/project-1.html
+++ b/project/project-1.html
@@ -4,8 +4,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="TemplateMo">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCW9RLMVK6"></script>
+        <script>
+           window.dataLayer = window.dataLayer || [];
+           function gtag(){dataLayer.push(arguments);}
+           gtag('js', new Date());
+   
+           gtag('config', 'G-CCW9RLMVK6');
+        </script>
+
+       <meta name="description" content="Portofolio Isul Alifajri Izul Alifajri">
+       <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
+       <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
+       <link rel="canonical" href="https://isulalifajri.github.io/" />
+       <meta name="google-site-verification" content="Website Portofolio isulalifajri Isul Alifajri Izul Alifajri">
 
         <title>Project First</title>
 
@@ -333,6 +346,23 @@
                 },
             });
         </script>
+
+        <!-- Default Statcounter code for My Portfolio Website
+            https://isulalifajri.github.io/ -->
+            <script type="text/javascript">
+                var sc_project=12945907; 
+                var sc_invisible=0; 
+                var sc_security="3f790a20"; 
+                var scJsHost = "https://";
+                document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+                "statcounter.com/counter/counter.js'></"+"script>");
+            </script>
+            <noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+            Statcounter" href="https://statcounter.com/" target="_blank"><img
+            class="statcounter" src="https://c.statcounter.com/12945907/0/3f790a20/0/"
+            alt="Web Analytics Made Easy - Statcounter"
+            referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+            <!-- End of Statcounter Code -->
 
         
     </body>
