--- a/project/project-4.html
+++ b/project/project-4.html
@@ -108,7 +108,7 @@
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
-                                    <h2 class="text-white me-4 mb-0">Dekorasi</h2>
+                                    <h2 class="text-white me-4 mb-0">E-commerce Laptop</h2>
 
                                     <img src="../project-images4/storenits/frontend/frontend-storenits-1.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
