--- a/index.html
+++ b/index.html
@@ -717,18 +717,19 @@
             https://isulalifajri.github.io/ -->
             <script type="text/javascript">
                 var sc_project=12945907; 
-                var sc_invisible=0; 
+                var sc_invisible=1; 
                 var sc_security="3f790a20"; 
-                var scJsHost = "https://";
-                document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-                "statcounter.com/counter/counter.js'></"+"script>");
-            </script>
-            <noscript><div class="statcounter"><a title="Web Analytics Made Easy -
-            Statcounter" href="https://statcounter.com/" target="_blank"><img
-            class="statcounter" src="https://c.statcounter.com/12945907/0/3f790a20/0/"
-            alt="Web Analytics Made Easy - Statcounter"
-            referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-            <!-- End of Statcounter Code -->
+                </script>
+                <script type="text/javascript"
+                src="https://www.statcounter.com/counter/counter.js"
+                async></script>
+                <noscript><div class="statcounter"><a title="web stats"
+                href="https://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="https://c.statcounter.com/12945907/0/3f790a20/1/"
+                alt="web stats"
+                referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+                <!-- End of Statcounter Code -->
             
     </body>
 </html>
