--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                             <h3 class="mb-0">Project 3</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt=""></p>
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/html-css-js.png" class="hover-code" alt=""></p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
