--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </div>
 
                                 <h2 class="mb-4 text-2">Perkenalkan Nama Saya Isul Alifajri</h2>
-                                <h2 class="mb-4">Saya Seorang <span class="typing"></span></h2>
+                                <h2 class="mb-4 text-animate">Saya Seorang <span class="typing"></span></h2>
                                 <p class="mb-4">
                                     <a class="custom-btn btn custom-link seeu" href="#section_2" style="visibility: hidden;">Lihat Selengkapnya..</a>
                                 </p>
