--- a/project/project-2.html
+++ b/project/project-2.html
@@ -18,7 +18,7 @@
        <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
        <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
        <link rel="canonical" href="https://isulalifajri.github.io/" />
-       <meta name="google-site-verification" content="Website Portofolio isulalifajri Isul Alifajri Izul Alifajri">
+       <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
 
         <title>Project Second</title>
 
