--- a/project/project-1.html
+++ b/project/project-1.html
@@ -14,13 +14,19 @@
            gtag('config', 'G-CCW9RLMVK6');
         </script>
 
-       <meta name="description" content="Portofolio Isul Alifajri Izul Alifajri">
-       <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
-       <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
-       <link rel="canonical" href="https://isulalifajri.github.io/" />
-       <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
-
         <title>Project First</title>
+        <meta name="description" content="Portofolio Isul Alifajri Izul Alifajri">
+        <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
+        <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
+        <link rel="canonical" href="https://isulalifajri.github.io/project/project-1.html" />
+        <meta property="og:locale" content="id_ID" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Programmer Web Portofolio Isul Alifajri Izul Alifajri" />
+        <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri Izul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemgrograman" />
+        <meta property="og:url" content="https://isulalifajri.github.io/project/project-1.html" />
+        <meta property="og:site_name" content="Isul Alifajri Portofolio" />
+        
+        <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
 
         <!-- Icon Portofolio -->
         <link href="../img/heningsunyi.jpg" rel="icon">
