--- a/project/project-3.html
+++ b/project/project-3.html
@@ -50,6 +50,11 @@
     
     <body class="bg-2">
 
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59HWGNJZ"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
         <section class="preloader">
             <div class="spinner">
                 <span class="spinner-rotate"></span>    
@@ -271,7 +276,7 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="">© 2020 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
+                                <span class="">© 2022 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
                                 Design Edited: 
                                 <a rel="sponsored" href="" target="_blank">By Isul Alifajri</a>
                             </p>
