--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
     </head>
     
     <body class="bg-2">
+        <!-- Google Tag Manager (noscript) -->
+            <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59HWGNJZ"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 
         <section class="preloader">
             <div class="spinner">
@@ -639,7 +643,7 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="">© 2020 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
+                                <span class="">© 2022 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
                                 Design Edited: 
                                 <a rel="sponsored" href="#">By Isul Alifajri</a>
                             </p>
